# meeting-assistant

./: .env.example  LICENSE  README.md  config.yaml  gemini_transcriber.py  main.py  pyproject.toml  speech.py
mcp/: mcp_server.py
static/css/: speech_recognition.css
static/js/: speech_recognition.js
templates/: speech_recognition.html
